--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.6.6</version>
 		</dependency>
+	 <dependency>
+	  <groupId>commons-cli</groupId>
+	  <artifactId>commons-cli</artifactId>
+	  <version>1.2</version>
+	 </dependency>
 	</dependencies>
 
 	<build>
