--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,46 @@
 			<artifactId>commons-cli</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.jackrabbit</groupId>
+			<artifactId>jackrabbit-webdav</artifactId>
+			<version>2.2.13</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-nop</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>jcl-over-slf4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>log4j</groupId>
+					<artifactId>log4j</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+	 <dependency>
+	  <groupId>commons-logging</groupId>
+	  <artifactId>commons-logging</artifactId>
+	  <version>1.2</version>
+	  <classifier>adapters</classifier>
+	 </dependency>
+	 <dependency>
+	  <groupId>commons-logging</groupId>
+	  <artifactId>commons-logging-api</artifactId>
+	  <version>1.1</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>com.github.lookfirst</groupId>
+	  <artifactId>sardine</artifactId>
+	  <version>5.6</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.apache.commons</groupId>
+	  <artifactId>commons-io</artifactId>
+	  <version>1.3.2</version>
+	 </dependency>
 	</dependencies>
 
 	<reporting>
@@ -41,7 +81,7 @@
 			<plugin>
 				<groupId>maven</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.3</version>
+				<version>2.9.1</version>
 				<configuration>
 					
 				</configuration>
@@ -59,12 +99,22 @@
 			</resource>
 		</resources>
 		
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>2.9.1</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
 		<plugins>
 			<!-- Javadoc -->
 			<plugin>
 				<groupId>maven</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.10.3</version>
+				<version>2.9.1</version>
 				<configuration>
 					
 				</configuration>
