--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,11 @@
 	  <artifactId>commons-io</artifactId>
 	  <version>1.3.2</version>
 	 </dependency>
+	 <dependency>
+	  <groupId>com.typesafe</groupId>
+	  <artifactId>config</artifactId>
+	  <version>1.3.0</version>
+	 </dependency>
 	</dependencies>
 
 	<reporting>
