Read configuration from file

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -5,10 +5,14 @@ calendarmail {
 		{
 			hostname : "www.heise.de"
 			address : ""
+			username : ""
+			password : ""
 		}
 		{
 			hostname : "github.com"
 			address : ""
+			username : ""
+			password : ""
 		}
 	]
 	# Email receivers
