--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
 	  <artifactId>config</artifactId>
 	  <version>1.3.0</version>
 	 </dependency>
+	 <dependency>
+	  <groupId>org.mnode.ical4j</groupId>
+	  <artifactId>ical4j</artifactId>
+	  <version>2.0-beta1</version>
+	 </dependency>
 	</dependencies>
 
 	<reporting>
