--- a/pom.xml
+++ b/pom.xml
@@ -87,20 +87,20 @@
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-javadoc-plugin</artifactId>
 			<version>2.10.3</version>
-		 <exclusions>
-		  <exclusion>
-		   <groupId>org.slf4j</groupId>
-		   <artifactId>jcl-over-slf4j</artifactId>
-		  </exclusion>
-		  <exclusion>
-		   <groupId>org.slf4j</groupId>
-		   <artifactId>slf4j-jdk14</artifactId>
-		  </exclusion>
-		  <exclusion>
-		   <groupId>org.slf4j</groupId>
-		   <artifactId>slf4j-nop</artifactId>
-		  </exclusion>
-		 </exclusions>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>jcl-over-slf4j</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-jdk14</artifactId>
+				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-nop</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
@@ -153,6 +153,12 @@
 					</execution>
 				</executions>
 				<configuration>
+<!--					<doclet>gr.spinellis.umlgraph.doclet.UmlGraphDoc</doclet>
+					<docletArtifact>
+						<groupId>gr.spinellis</groupId>
+						<artifactId>UmlGraph</artifactId>
+						<version>4.6</version>
+					</docletArtifact>-->
 					<outputDirectory>${project.build.directory}/javadoc</outputDirectory>
 					<reportOutputDirectory>${project.reporting.outputDirectory}/javadoc</reportOutputDirectory>
 					<additionalparam>-Xdoclint:none</additionalparam>
