create Reminder class and configuration

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -15,12 +15,23 @@ calendarmail {
 			password : ""
 		}
 	]
-	# Email receivers
-	receivers {
-		# Monthly reminder email list
-		monthly = [
-			"sheldon@cooper.edu"
-			"ed.snowden@lavabit.com"
-		]
-	}
+	# List of Reminders
+	reminders = [
+		{
+			name : "monthly"
+			days_in_advance : 31
+			receivers = [
+				"sheldon@cooper.edu"
+				"ed.snowden@lavabit.com"
+			]
+		}
+		{
+			name : "daily"
+			days_in_advance : 3
+			receivers = [
+				"sheldon@cooper.edu"
+				"ed.snowden@lavabit.com"
+			]
+		}
+	]
 }
