created class for email server configuration

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -15,6 +15,15 @@ calendarmail {
 			password : ""
 		}
 	]
+	# Email Server
+	emailserver {
+		hostname : "smtp.googlemail.com"
+		smtp_port : 465
+		username : ""
+		password : ""
+		ssl_connect : true
+		from : "teezett@github.com"
+	}
 	# List of Reminders
 	reminders = [
 		{
