--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,16 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+	 <dependency>
+	  <groupId>org.apache.commons</groupId>
+	  <artifactId>commons-email</artifactId>
+	  <version>1.4</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>javax.mail</groupId>
+	  <artifactId>mail</artifactId>
+	  <version>1.4.1</version>
+	 </dependency>
 	</dependencies>
 
 	<reporting>
