--- a/pom.xml
+++ b/pom.xml
@@ -62,11 +62,11 @@
 			<version>1.3.0</version>
 		</dependency>
 		<!-- encryption -->
-		<dependency>
+<!--		<dependency>
 			<groupId>org.jasypt</groupId>
 			<artifactId>jasypt</artifactId>
 			<version>1.9.2</version>
-		</dependency>
+		</dependency>-->
 		<!-- WebDAV -->
 		<dependency>
 			<groupId>com.github.lookfirst</groupId>
