--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,4 +1,5 @@
 # Configuration for email reminders of remote CalDAV calendars
+# use encryption password 'password' for encrypted variants of passwords
 calendarmail {
 	# list of calendars
 	calendars = [
@@ -10,17 +11,19 @@ calendarmail {
 		}
 		{
 			hostname : "github.com"
-			address : ""
-			username : ""
-			password : ""
+			address : "https://github.com/address"
+			username : "hurz"
+			password : "foobar"
+			#password : "ENC(5ebWjhAo0sw=)"
 		}
 	]
 	# Email Server
 	emailserver {
 		hostname : "smtp.googlemail.com"
 		smtp_port : 465
-		username : ""
-		password : ""
+		username : "egon"
+		password : "secret"
+		#password : "ENC(z9dHAmJROhw=)"
 		ssl_connect : true
 		from : "teezett@github.com"
 	}
