--- a/pom.xml
+++ b/pom.xml
@@ -199,7 +199,7 @@
         <version>1.4.0</version>
         <executions>
           <execution>
-						<phase>test</phase>
+						<phase>integration-test</phase>
             <goals>
               <goal>java</goal>
             </goals>
