--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
 			<version>1.6.6</version>
 		</dependency>
 		<!-- javadoc -->
-<!--		<dependency>
+		<!--		<dependency>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-javadoc-plugin</artifactId>
 			<version>2.10.3</version>
@@ -62,7 +62,7 @@
 			<version>1.3.0</version>
 		</dependency>
 		<!-- encryption -->
-<!--		<dependency>
+		<!--		<dependency>
 			<groupId>org.jasypt</groupId>
 			<artifactId>jasypt</artifactId>
 			<version>1.9.2</version>
@@ -92,7 +92,7 @@
 			<version>1.3.2</version>
 		</dependency>
 		<!-- WebDAV -->
-<!--		<dependency>
+		<!--		<dependency>
 			<groupId>org.apache.jackrabbit</groupId>
 			<artifactId>jackrabbit-webdav</artifactId>
 			<version>2.2.13</version>
@@ -111,7 +111,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>-->
-<!--		<dependency>
+		<!--		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 			<version>1.2</version>
@@ -122,6 +122,12 @@
 			<artifactId>commons-logging-api</artifactId>
 			<version>1.1</version>
 		</dependency>-->
+		<!-- Scheduler with cron based triggers -->
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.1.4</version>
+		</dependency>
 	</dependencies>
 
 	<reporting>
@@ -194,19 +200,19 @@
 				</configuration>
 			</plugin>
 			<plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.4.0</version>
-        <executions>
-          <execution>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.4.0</version>
+				<executions>
+					<execution>
 						<phase>integration-test</phase>
-            <goals>
-              <goal>java</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <mainClass>${project.mainClass}</mainClass>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>${project.mainClass}</mainClass>
 					<arguments>
 					</arguments>
 				</configuration>
