Implemented cron triggers

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -31,6 +31,8 @@ calendarmail {
 	reminders = [
 		{
 			name : "monthly"
+			cron_trigger : ""
+			#cron_trigger: "0 0 12 L * ?"
 			days_in_advance : 31
 			receivers = [
 				"sheldon@cooper.edu"
@@ -39,6 +41,8 @@ calendarmail {
 		}
 		{
 			name : "daily"
+			cron_trigger : ""
+			#cron_trigger: "0 0 6 1/1 * ? *"
 			days_in_advance : 3
 			receivers = [
 				"sheldon@cooper.edu"
