--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -31,6 +31,7 @@ calendarmail {
 	reminders = [
 		{
 			name : "monthly"
+			# Configure trigger with cron description: http://www.cronmaker.com/
 			cron_trigger : ""
 			#cron_trigger: "0 0 12 L * ?"
 			days_in_advance : 31
