--- a/src/main/resources/quartz.properties
+++ b/src/main/resources/quartz.properties
@@ -1,3 +1,4 @@
 # Configuration for quartz scheduler
 org.quartz.scheduler.skipUpdateCheck = true
 org.quartz.threadPool.threadCount = 3
+org.quartz.scheduler.jmx.export = true
