--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,10 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.mainClass>de.heinersyndikat.tools.calendarmail.CalendarMail</project.mainClass>
 		<project.vendor>de.heinersyndikat.calendarmail</project.vendor>
+		<asciidoctor.maven.plugin.version>1.5.2.1</asciidoctor.maven.plugin.version>
+		<asciidoctorj.version>1.5.3.2</asciidoctorj.version>
+		<asciidoctorj.diagram.version>1.3.1</asciidoctorj.diagram.version>
+		<jruby.version>1.7.21</jruby.version><!-- downgrade of JRuby see: https://github.com/asciidoctor/asciidoctorj/issues/409 -->
 	</properties>
 		
 	<dependencies>
@@ -199,6 +203,67 @@
 					<noDeploy>true</noDeploy>
 				</configuration>
 			</plugin>
+			<!-- asciidoc documentation -->
+			<plugin>
+				<groupId>org.asciidoctor</groupId>
+				<artifactId>asciidoctor-maven-plugin</artifactId>
+				<version>${asciidoctor.maven.plugin.version}</version>
+				<dependencies>
+					<!-- Comment this section to use the default jruby artifact provided by the plugin -->
+					<dependency>
+						<groupId>org.jruby</groupId>
+						<artifactId>jruby-complete</artifactId>
+						<version>${jruby.version}</version>
+					</dependency>
+					<!-- Comment this section to use the default AsciidoctorJ artifact provided by the plugin -->
+					<dependency>
+						<groupId>org.asciidoctor</groupId>
+						<artifactId>asciidoctorj</artifactId>
+						<version>${asciidoctorj.version}</version>
+					</dependency>
+					<dependency>
+						<groupId>org.asciidoctor</groupId>
+						<artifactId>asciidoctorj-diagram</artifactId>
+						<version>${asciidoctorj.diagram.version}</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<sourceDirectory>src/docs/asciidoc</sourceDirectory>
+					<requires>
+						<require>asciidoctor-diagram</require>
+					</requires>
+					<attributes>
+						<!-- Example below shows how to specify in this pom instead of System's PATH, the location of dot command of Graphviz, required by PlantUML libraries -->
+						<!-- Windows:
+								<graphvizdot>C:\Program Files (x86)\Graphviz2.38\bin\dot.exe</graphvizdot>
+						-->
+						<!-- *nix :
+								<graphvizdot>/usr/local/bin/dot</graphvizdot>
+						-->
+					</attributes>
+				</configuration>
+				<executions>
+					<execution>
+						<id>generate-html-doc</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>process-asciidoc</goal>
+						</goals>
+						<configuration>
+							<backend>html5</backend>
+							<attributes>
+								<imagesdir>./images</imagesdir>
+								<toc>left</toc>
+								<icons>font</icons>
+								<sectanchors>true</sectanchors>
+								<idprefix/>
+								<idseparator>-</idseparator>
+							</attributes>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<!-- mvn exec -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
