Draft version of documentation

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -5,7 +5,7 @@ calendarmail {
 	calendars = [
 		{
 			hostname : "www.heise.de"
-			address : ""
+			address : "http://www.heise.de/calendar"
 			username : ""
 			password : ""
 		}
