--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.heinersyndikat.tools</groupId>
 	<artifactId>calendarmail</artifactId>
-	<version>0.1-SNAPSHOT</version>
+	<version>0.2-SNAPSHOT</version>
 	<name>CalendarMail</name>
 	<packaging>jar</packaging>
 	<url>https://github.com/teezett/calendarmail</url>
@@ -256,7 +256,7 @@
 								<toc>left</toc>
 								<icons>font</icons>
 								<sectanchors>true</sectanchors>
-								<idprefix/>
+								<idprefix />
 								<idseparator>-</idseparator>
 							</attributes>
 						</configuration>
@@ -290,7 +290,7 @@
 					<fileSets>
 						<fileSet>
 							<directory>${basedir}/src/main/resources</directory>
-							<outputDirectory></outputDirectory>
+							<outputDirectory />
 						</fileSet>
 					</fileSets>
 					<descriptors>
