--- a/src/main/resources/MessageBundle.properties
+++ b/src/main/resources/MessageBundle.properties
@@ -5,3 +5,6 @@ this is the calendar reminder {0} summary.\n\
 Here are the events of the next {1,number,integer} days gathered from the\n\
 calendars {2}:\n\n
 email.body.greeting = \nGreetings\n
+email.body.signature = \n--\n\
+This is the {0} daemon ({1})\n\
+provided by {2}.\n
