--- a/src/main/resources/MessageBundle.properties
+++ b/src/main/resources/MessageBundle.properties
@@ -6,5 +6,5 @@ Here are the events of the next {1,number,integer} days gathered from the\n\
 calendars {2}:\n\n
 email.body.greeting = \nGreetings\n
 email.body.signature = \n--\n\
-This is the {0} daemon ({1})\n\
-provided by {2}.\n
+This is the {0} daemon (version {1})\n[{2}]\n\
+provided by ''{3}'' [{4}].\n
