--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,8 @@
 				<artifactId>jgitflow-maven-plugin</artifactId>
 				<version>1.0-m5.1</version>
 				<configuration>
+					<useReleaseProfile>false</useReleaseProfile>
+					<!--<skipTestProject>true</skipTestProject>-->
 					<noDeploy>true</noDeploy>
 				</configuration>
 			</plugin>
