--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.heinersyndikat.tools</groupId>
 	<artifactId>calendarmail</artifactId>
-	<version>0.1.1</version>
+	<version>0.2-SNAPSHOT</version>
 	<name>CalendarMail</name>
 	<packaging>jar</packaging>
 	<url>https://github.com/teezett/calendarmail</url>
